Fixed main tag linking; with overviews